--- a/style.css
+++ b/style.css
@@ -5,49 +5,56 @@ body {
 
 #head {
     text-align: center;
-
 }
 
-#donut-shops {
-
+/* #donut-shops {
     width: 1750px;
     height: 100px;
     border: 10px solid rgb(226, 179, 210);
-    padding: 50px;
+    padding: 60px;
     margin: 20px;
-
-}
+    
+} */
 
 #placeholdernut {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     height: 200px;
     width: 200px;
-
-
 }
 
-#donut-info{
+#donut-info {
     text-align: center;
 }
-
-
 
 #star-rating {
     text-align: center;
-    
 }
 
 .checked {
-
     color: orange;
-  }
+}
 
-  .container{
+.container {
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
 
-  }
+.donutimages {
+    display: flex;
+    overflow-x: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    height: 200px;
+    width: 200px;
+    /* position:relative; */
+    
+    
+}
+
